[metadata]
name = dosage
description = a comic strip downloader and archiver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dosage.rocks
license = MIT License
license_file = COPYING
platforms = Any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics
keywords = comic,webcomic,downloader,archiver,crawler
maintainer = Tobias Gruetzmacher
maintainer_email = tobias-dosage@23.gs
project_urls =
    Code = https://github.com/webcomics/dosage
    Issue tracker = https://github.com/webcomics/dosage/issues

[options]
packages = find:
install_requires =
    colorama
    imagesize
    lxml
    requests>=2.0
    cached_property;python_version<'3.8'
    importlib_metadata;python_version<'3.8'
python_requires = >=3.5
setup_requires =
    setuptools>=38.3.0
    setuptools_scm

[options.entry_points]
console_scripts =
    dosage = dosagelib.cmd:main

[options.extras_require]
bash =
    argcomplete
css =
    cssselect
dev =
    pytest-cov
    pytest-xdist
    responses
    flake8
    flake8-2020;python_version>'3.5'
    flake8-coding
    flake8-future-import
    flake8-no-fstring;python_version>'3.5'
    flake8-pytest
    flake8-pytest-style;python_version>'3.5'

[bdist_wheel]
universal = 1
