[metadata]
name = dosage
description = a comic strip downloader and archiver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dosage.rocks
maintainer = Tobias Gruetzmacher
maintainer_email = tobias-dosage@23.gs
license = MIT License
license_file = COPYING
platforms = Any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics
keywords = comic,webcomic,downloader,archiver,crawler
project_urls =
    Code = https://github.com/webcomics/dosage
    Issue tracker = https://github.com/webcomics/dosage/issues

[options]
packages = find:
install_requires =
    colorama
    imagesize
    lxml>=4.0.0
    platformdirs
    requests>=2.0
    cached_property;python_version<'3.8'
    importlib_metadata;python_version<'3.8'
include_package_data = true
python_requires = >=3.7

[options.entry_points]
console_scripts =
    dosage = dosagelib.cmd:main
pyinstaller40 =
    hook-dirs = dosagelib.__pyinstaller:get_hook_dirs

[options.extras_require]
bash =
    argcomplete
css =
    cssselect
dev =
    allure-pytest
    pytest-cov
    pytest-xdist
    responses
    setup-cfg-fmt
lint =
    flake8<6
    flake8-2020
    flake8-breakpoint
    flake8-bugbear
    flake8-coding
    flake8-commas
    flake8-comprehensions
    flake8-eradicate
    flake8-fixme
    flake8-functions
    flake8-future-import
    flake8-logging-format
    flake8-noqa
    Flake8-pyproject
    flake8-pytest
    flake8-pytest-style

[bdist_wheel]
universal = 1
